# multi-ralph

./: README.md  pyproject.toml
.claude/agents/: dev-ai.md  dev-backend.md  dev-frontend.md  dev-general.md  dev-qa.md  dev-sdet.md
.claude/skills/code-task-generator/: SKILL.md
scripts/: orchestrate.py
src/multi_ralph/: __init__.py  cli.py  orchestrate.py
src/multi_ralph/_data/.claude/agents/: dev-ai.md  dev-backend.md  dev-frontend.md  dev-general.md  dev-qa.md  dev-sdet.md
src/multi_ralph/_data/.claude/skills/code-assist/: SKILL.md
