[project]
name = "multi-ralph"
version = "0.1.0"
description = "Multi-agent orchestration framework for autonomous development workflows using Claude Code and Beads"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Noah Frenkel" }]
keywords = ["claude", "agents", "orchestration", "beads", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.scripts]
multi-ralph = "multi_ralph.cli:main"
ralph = "multi_ralph.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multi_ralph"]

[tool.hatch.build.targets.wheel.force-include]
".claude" = "multi_ralph/_data/.claude"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    ".claude/",
    "README.md",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
